Various tweaks to stack and script

--- a/keras-deeplearning/lending-club-loan-grades.ipynb
+++ b/keras-deeplearning/lending-club-loan-grades.ipynb
@@ -207,7 +207,12 @@
     "    return model\n",
     "\n",
     "model = baseline_model()\n",
-    "history = model.fit(X_train.as_matrix(), y_train.as_matrix(), validation_split=0.2, nb_epoch=38, batch_size=32, verbose=2)"
+    "history = model.fit(X_train.as_matrix(), \n",
+    "                    y_train.as_matrix(),\n",
+    "                    validation_split=0.2,\n",
+    "                    nb_epoch=38 if sample != None else 20, # Model converges much faster on larger data set \n",
+    "                    batch_size=32,\n",
+    "                    verbose=2)"
    ]
   },
   {
